--- a/Programs/build-project2-Desktop_Qt_5_9_1_clang_64bit-Debug/Makefile
+++ b/Programs/build-project2-Desktop_Qt_5_9_1_clang_64bit-Debug/Makefile
@@ -212,6 +212,7 @@ DIST          = /Users/Kjetil/Qt/5.9.1/clang_64/mkspecs/features/spec_pre.prf \
 		/Users/Kjetil/Qt/5.9.1/clang_64/mkspecs/features/qt_config.prf \
 		/Users/Kjetil/Qt/5.9.1/clang_64/mkspecs/macx-clang/qmake.conf \
 		/Users/Kjetil/Qt/5.9.1/clang_64/mkspecs/features/spec_post.prf \
+		../project2/.qmake.stash \
 		/Users/Kjetil/Qt/5.9.1/clang_64/mkspecs/features/exclusive_builds.prf \
 		/Users/Kjetil/Qt/5.9.1/clang_64/mkspecs/features/mac/sdk.prf \
 		/Users/Kjetil/Qt/5.9.1/clang_64/mkspecs/features/toolchain.prf \
@@ -408,6 +409,7 @@ Makefile: ../project2/project2.pro /Users/Kjetil/Qt/5.9.1/clang_64/mkspecs/macx-
 		/Users/Kjetil/Qt/5.9.1/clang_64/mkspecs/features/qt_config.prf \
 		/Users/Kjetil/Qt/5.9.1/clang_64/mkspecs/macx-clang/qmake.conf \
 		/Users/Kjetil/Qt/5.9.1/clang_64/mkspecs/features/spec_post.prf \
+		.qmake.stash \
 		/Users/Kjetil/Qt/5.9.1/clang_64/mkspecs/features/exclusive_builds.prf \
 		/Users/Kjetil/Qt/5.9.1/clang_64/mkspecs/features/mac/sdk.prf \
 		/Users/Kjetil/Qt/5.9.1/clang_64/mkspecs/features/toolchain.prf \
@@ -588,6 +590,7 @@ Makefile: ../project2/project2.pro /Users/Kjetil/Qt/5.9.1/clang_64/mkspecs/macx-
 /Users/Kjetil/Qt/5.9.1/clang_64/mkspecs/features/qt_config.prf:
 /Users/Kjetil/Qt/5.9.1/clang_64/mkspecs/macx-clang/qmake.conf:
 /Users/Kjetil/Qt/5.9.1/clang_64/mkspecs/features/spec_post.prf:
+.qmake.stash:
 /Users/Kjetil/Qt/5.9.1/clang_64/mkspecs/features/exclusive_builds.prf:
 /Users/Kjetil/Qt/5.9.1/clang_64/mkspecs/features/mac/sdk.prf:
 /Users/Kjetil/Qt/5.9.1/clang_64/mkspecs/features/toolchain.prf:
@@ -632,6 +635,7 @@ clean: compiler_clean
 
 distclean: clean 
 	-$(DEL_FILE) $(TARGET) 
+	-$(DEL_FILE) .qmake.stash
 	-$(DEL_FILE) Makefile
 
 
